--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,28 @@
+@font-face {
+    font-family: 'raleway';
+    src: url('../fonts/Raleway/Raleway-VariableFont_wght.ttf');
+}
+
+@font-face {
+    font-family: 'open-sans';
+    src: url('../fonts/Open_Sans/OpenSans-Regular.ttf');
+}
+
+body {
+    font-family: 'open-sans';
+}
+
+main {
+    min-height: 50vh;
+}
+
 a:hover,
 a:active {
     text-decoration: none;
+}
+
+div#userText {
+    height: 50vh;
 }
 
 .full-container {
