work in progress

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,22 @@
     src: url('../fonts/Open_Sans/OpenSans-Regular.ttf');
 }
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'raleway', Helvetica;
-
     padding: 0px 2vw;
 }
 
+nav {
+    height: 7vh;
+}
+
+
 main {
-    min-height: 75vh;
+    min-height: 68vh;
     background-color: #f4f4f4;
 }
 
@@ -30,20 +38,38 @@ main {
     color: rgba(2, 63, 98, 1);
 }
 
-a,
-a:hover,
-a:active {
+nav a:hover {
+    border: 1px solid #f4f4f4;
+    border-radius: 15px;
     text-decoration: none;
 }
 
-div#userText {
-    height: max-content;
-    padding: 10px;
+nav a {
+    border: 1px solid transparent;
+    padding: 2px 8px;
+}
+
+a,
+a:active,
+a:hover {
+    text-decoration: none;
 }
 
 #getUserText {
     line-height: initial;
-    min-height: 40vh;
+    min-height: 20vh;
+}
+
+#originalUserText {
+    line-height: initial;
+    height: 50vh;
+}
+
+
+#userText {
+    min-height: 20vh;
+    padding: 10px;
+    text-align: left;
 }
 
 .full-container {
@@ -68,7 +94,6 @@ span.toEdit {
 }
 
 .hamburger {
-    font-size: 5rem;
     cursor: pointer;
     display: none;
 }
@@ -83,6 +108,15 @@ p.conditions {
     height: 30vh;
 }
 
-.hidden {
-    visibility: hidden;
+
+
+@media (max-width:768px) {
+
+    #originalUserText {
+        min-height: 30vh;
+    }
+
+    nav {
+        height: 90vh;
+    }
 }
