--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,10 @@ main {
     color: rgba(2, 63, 98, 1);
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
 nav a:hover {
     border: 1px solid #f4f4f4;
     border-radius: 15px;
