--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,14 @@ p.conditions {
     height: 30vh;
 }
 
+h3[data-toggle]:hover {
+    background: rgb(2, 63, 98);
+    background: -moz-radial-gradient(circle, rgba(2, 63, 98, 1) 0%, rgba(3, 105, 163, 1) 78%);
+    background: -webkit-radial-gradient(circle, rgba(2, 63, 98, 1) 0%, rgba(3, 105, 163, 1) 78%);
+    background: radial-gradient(circle, rgba(2, 63, 98, 1) 0%, rgba(3, 105, 163, 1) 78%);
+    color: #f4f4f4;
+    border-radius: 20px;
+}
 
 
 @media (max-width:768px) {
