almost ok with user's interactions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,11 @@ h3[data-toggle]:hover {
     border-radius: 20px;
 }
 
+.modal-dialog,
+.modal-body {
+    height: max-content !important;
+}
+
 
 @media (max-width:768px) {
 
