--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,9 +41,12 @@ main {
     border: none !important;
 }
 
+/*
 .modal-content:hover {
     color: initial !important;
 }
+
+*/
 
 .modal-backdrop.show {
     opacity: 0.9 !important;
@@ -152,6 +155,7 @@ a,
 a:active,
 a:hover {
     text-decoration: none;
+    color: inherit;
 }
 
 #getUserText {
